--- a/PyCitySchools/PyCitySchools.ipynb
+++ b/PyCitySchools/PyCitySchools.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 72,
    "id": "7e36d9dd-219d-4414-b302-112aabf1605f",
    "metadata": {},
    "outputs": [],
@@ -13,27 +13,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "id": "f147640c-4a62-454a-a6fb-f14051604670",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Files to Load\n",
-    "student_input = \"Resources/students_complete.csv\"\n",
-    "school_input = \"Resources/schools_complete.csv\"\n",
-    "\n",
-    "# Read School and Student Data File and store into Pandas DataFrames\n",
-    "student_data = pd.read_csv(student_input)\n",
-    "school_data = pd.read_csv(school_input)\n",
-    "\n",
-    "# Combine the data into a single dataset.  \n",
-    "school_df = pd.merge(student_data, school_data, how=\"left\", on=[\"school_name\", \"school_name\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "id": "7dd6d21e-7694-4d3b-b4df-9bc2bc708266",
    "metadata": {},
    "outputs": [
     {
@@ -161,13 +142,23 @@
        "4             97          84          0  District  2917  1910635  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "school_df.head()"
+    "# Files to Load\n",
+    "student_input = \"Resources/students_complete.csv\"\n",
+    "school_input = \"Resources/schools_complete.csv\"\n",
+    "\n",
+    "# Read School and Student Data File and store into Pandas DataFrames\n",
+    "student_data = pd.read_csv(student_input)\n",
+    "school_data = pd.read_csv(school_input)\n",
+    "\n",
+    "# Combine the data into a single dataset.  \n",
+    "df = pd.merge(student_data, school_data, how=\"left\", on=[\"school_name\", \"school_name\"])\n",
+    "df.head()"
    ]
   },
   {
@@ -197,37 +188,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 128,
    "id": "ccdf3c92-c827-4c56-ad43-d1410eebdb54",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array(['Huang High School', 'Figueroa High School', 'Shelton High School',\n",
-       "       'Hernandez High School', 'Griffin High School',\n",
-       "       'Wilson High School', 'Cabrera High School', 'Bailey High School',\n",
-       "       'Holden High School', 'Pena High School', 'Wright High School',\n",
-       "       'Rodriguez High School', 'Johnson High School', 'Ford High School',\n",
-       "       'Thomas High School'], dtype=object)"
+       "{'Total Schools': 15, 'Total Students': 39170}"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# district_df = school_df[[]]\n",
-    "\n",
-    "school_df[\"school_name\"].nunique()\n",
-    "school_df[\"school_name\"].unique()\n"
+    "# create dataframe to show total with columns for schools, students, and budget\n",
+    "test_dict = {\"Total Schools\" : df[\"School ID\"].nunique(), \"Total Students\" : df[\"Student ID\"].nunique()}\n",
+    "test_dict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "7c98a538-a397-48d2-ae22-d6922f028ee4",
+   "execution_count": 142,
+   "id": "57f3032b-6d79-4fb8-8ba9-4e35e6fbec49",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Length mismatch: Expected 39170 rows, received array of length 15",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/q2/5v2xmgf12v118bg1jrms5ph80000gn/T/ipykernel_29526/3651593579.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mbudget_test\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"School ID\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"budget\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_index\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"School ID\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0munique\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mbudget_test\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/anaconda3/lib/python3.9/site-packages/pandas/util/_decorators.py\u001b[0m in \u001b[0;36mwrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    309\u001b[0m                     \u001b[0mstacklevel\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mstacklevel\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    310\u001b[0m                 )\n\u001b[0;32m--> 311\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mfunc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    312\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    313\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mwrapper\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/anaconda3/lib/python3.9/site-packages/pandas/core/frame.py\u001b[0m in \u001b[0;36mset_index\u001b[0;34m(self, keys, drop, append, inplace, verify_integrity)\u001b[0m\n\u001b[1;32m   5499\u001b[0m                 \u001b[0;31m# check newest element against length of calling frame, since\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   5500\u001b[0m                 \u001b[0;31m# ensure_index_from_sequences would not raise for append=False.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 5501\u001b[0;31m                 raise ValueError(\n\u001b[0m\u001b[1;32m   5502\u001b[0m                     \u001b[0;34mf\"Length mismatch: Expected {len(self)} rows, \"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   5503\u001b[0m                     \u001b[0;34mf\"received array of length {len(arrays[-1])}\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: Length mismatch: Expected 39170 rows, received array of length 15"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "id": "bea0a4b1-fc40-4947-b4f3-4f3d7d619502",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create dataframe to show avg with columns math score and reading score\n",
+    "avg_df = df.loc[:,[\"math_score\",\"reading_score\"]].mean()\n",
+    "avg_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "id": "89ad8b6a-ae57-4e5d-807b-6019a736db7e",
    "metadata": {},
    "outputs": [
     {
@@ -262,224 +281,123 @@
        "      <th>type</th>\n",
        "      <th>size</th>\n",
        "      <th>budget</th>\n",
+       "      <th>% passing math</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>count</th>\n",
-       "      <td>39170.000000</td>\n",
-       "      <td>39170</td>\n",
-       "      <td>39170</td>\n",
-       "      <td>39170</td>\n",
-       "      <td>39170</td>\n",
-       "      <td>39170.00000</td>\n",
-       "      <td>39170.000000</td>\n",
-       "      <td>39170.000000</td>\n",
-       "      <td>39170</td>\n",
-       "      <td>39170.000000</td>\n",
-       "      <td>3.917000e+04</td>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Paul Bradley</td>\n",
+       "      <td>M</td>\n",
+       "      <td>9th</td>\n",
+       "      <td>Huang High School</td>\n",
+       "      <td>66</td>\n",
+       "      <td>79</td>\n",
+       "      <td>0</td>\n",
+       "      <td>District</td>\n",
+       "      <td>2917</td>\n",
+       "      <td>1910635</td>\n",
+       "      <td>0.241435</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>unique</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>32715</td>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Victor Smith</td>\n",
+       "      <td>M</td>\n",
+       "      <td>12th</td>\n",
+       "      <td>Huang High School</td>\n",
+       "      <td>94</td>\n",
+       "      <td>61</td>\n",
+       "      <td>0</td>\n",
+       "      <td>District</td>\n",
+       "      <td>2917</td>\n",
+       "      <td>1910635</td>\n",
+       "      <td>0.241435</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
        "      <td>2</td>\n",
+       "      <td>Kevin Rodriguez</td>\n",
+       "      <td>M</td>\n",
+       "      <td>12th</td>\n",
+       "      <td>Huang High School</td>\n",
+       "      <td>90</td>\n",
+       "      <td>60</td>\n",
+       "      <td>0</td>\n",
+       "      <td>District</td>\n",
+       "      <td>2917</td>\n",
+       "      <td>1910635</td>\n",
+       "      <td>0.241435</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Dr. Richard Scott</td>\n",
+       "      <td>M</td>\n",
+       "      <td>12th</td>\n",
+       "      <td>Huang High School</td>\n",
+       "      <td>67</td>\n",
+       "      <td>58</td>\n",
+       "      <td>0</td>\n",
+       "      <td>District</td>\n",
+       "      <td>2917</td>\n",
+       "      <td>1910635</td>\n",
+       "      <td>0.241435</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
        "      <td>4</td>\n",
-       "      <td>15</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>top</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Michael Smith</td>\n",
+       "      <td>Bonnie Ray</td>\n",
        "      <td>F</td>\n",
        "      <td>9th</td>\n",
-       "      <td>Bailey High School</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>Huang High School</td>\n",
+       "      <td>97</td>\n",
+       "      <td>84</td>\n",
+       "      <td>0</td>\n",
        "      <td>District</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>freq</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>26</td>\n",
-       "      <td>19735</td>\n",
-       "      <td>11408</td>\n",
-       "      <td>4976</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>26976</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>mean</th>\n",
-       "      <td>19584.500000</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>81.87784</td>\n",
-       "      <td>78.985371</td>\n",
-       "      <td>6.978172</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>3332.957110</td>\n",
-       "      <td>2.117241e+06</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>std</th>\n",
-       "      <td>11307.549359</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>10.23958</td>\n",
-       "      <td>12.309968</td>\n",
-       "      <td>4.444329</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1323.914069</td>\n",
-       "      <td>8.749987e+05</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>min</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>63.00000</td>\n",
-       "      <td>55.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>427.000000</td>\n",
-       "      <td>2.480870e+05</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25%</th>\n",
-       "      <td>9792.250000</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>73.00000</td>\n",
-       "      <td>69.000000</td>\n",
-       "      <td>3.000000</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1858.000000</td>\n",
-       "      <td>1.081356e+06</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50%</th>\n",
-       "      <td>19584.500000</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>82.00000</td>\n",
-       "      <td>79.000000</td>\n",
-       "      <td>7.000000</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2949.000000</td>\n",
-       "      <td>1.910635e+06</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>75%</th>\n",
-       "      <td>29376.750000</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>91.00000</td>\n",
-       "      <td>89.000000</td>\n",
-       "      <td>11.000000</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>4635.000000</td>\n",
-       "      <td>3.022020e+06</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>max</th>\n",
-       "      <td>39169.000000</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>99.00000</td>\n",
-       "      <td>99.000000</td>\n",
-       "      <td>14.000000</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>4976.000000</td>\n",
-       "      <td>3.124928e+06</td>\n",
+       "      <td>2917</td>\n",
+       "      <td>1910635</td>\n",
+       "      <td>0.241435</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "          Student ID   student_name gender  grade         school_name  \\\n",
-       "count   39170.000000          39170  39170  39170               39170   \n",
-       "unique           NaN          32715      2      4                  15   \n",
-       "top              NaN  Michael Smith      F    9th  Bailey High School   \n",
-       "freq             NaN             26  19735  11408                4976   \n",
-       "mean    19584.500000            NaN    NaN    NaN                 NaN   \n",
-       "std     11307.549359            NaN    NaN    NaN                 NaN   \n",
-       "min         0.000000            NaN    NaN    NaN                 NaN   \n",
-       "25%      9792.250000            NaN    NaN    NaN                 NaN   \n",
-       "50%     19584.500000            NaN    NaN    NaN                 NaN   \n",
-       "75%     29376.750000            NaN    NaN    NaN                 NaN   \n",
-       "max     39169.000000            NaN    NaN    NaN                 NaN   \n",
+       "   Student ID       student_name gender grade        school_name  \\\n",
+       "0           0       Paul Bradley      M   9th  Huang High School   \n",
+       "1           1       Victor Smith      M  12th  Huang High School   \n",
+       "2           2    Kevin Rodriguez      M  12th  Huang High School   \n",
+       "3           3  Dr. Richard Scott      M  12th  Huang High School   \n",
+       "4           4         Bonnie Ray      F   9th  Huang High School   \n",
        "\n",
-       "        reading_score    math_score     School ID      type          size  \\\n",
-       "count     39170.00000  39170.000000  39170.000000     39170  39170.000000   \n",
-       "unique            NaN           NaN           NaN         2           NaN   \n",
-       "top               NaN           NaN           NaN  District           NaN   \n",
-       "freq              NaN           NaN           NaN     26976           NaN   \n",
-       "mean         81.87784     78.985371      6.978172       NaN   3332.957110   \n",
-       "std          10.23958     12.309968      4.444329       NaN   1323.914069   \n",
-       "min          63.00000     55.000000      0.000000       NaN    427.000000   \n",
-       "25%          73.00000     69.000000      3.000000       NaN   1858.000000   \n",
-       "50%          82.00000     79.000000      7.000000       NaN   2949.000000   \n",
-       "75%          91.00000     89.000000     11.000000       NaN   4635.000000   \n",
-       "max          99.00000     99.000000     14.000000       NaN   4976.000000   \n",
+       "   reading_score  math_score  School ID      type  size   budget  \\\n",
+       "0             66          79          0  District  2917  1910635   \n",
+       "1             94          61          0  District  2917  1910635   \n",
+       "2             90          60          0  District  2917  1910635   \n",
+       "3             67          58          0  District  2917  1910635   \n",
+       "4             97          84          0  District  2917  1910635   \n",
        "\n",
-       "              budget  \n",
-       "count   3.917000e+04  \n",
-       "unique           NaN  \n",
-       "top              NaN  \n",
-       "freq             NaN  \n",
-       "mean    2.117241e+06  \n",
-       "std     8.749987e+05  \n",
-       "min     2.480870e+05  \n",
-       "25%     1.081356e+06  \n",
-       "50%     1.910635e+06  \n",
-       "75%     3.022020e+06  \n",
-       "max     3.124928e+06  "
+       "   % passing math  \n",
+       "0        0.241435  \n",
+       "1        0.241435  \n",
+       "2        0.241435  \n",
+       "3        0.241435  \n",
+       "4        0.241435  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "school_df.describe(include='all')"
+    "# create new columns that show % passing for math, reading, and combined\n",
+    "newDF = df\n",
+    "newDF[\"% passing math\"] = (df[\"math_score\"].mean() / df[\"student_name\"].nunique()) * 100\n",
+    "newDF.head()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "89ad8b6a-ae57-4e5d-807b-6019a736db7e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
