--- a/PyCitySchools/PyCitySchools.ipynb
+++ b/PyCitySchools/PyCitySchools.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 260,
    "id": "7e36d9dd-219d-4414-b302-112aabf1605f",
    "metadata": {},
    "outputs": [],
@@ -13,140 +13,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 261,
    "id": "f147640c-4a62-454a-a6fb-f14051604670",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Student ID</th>\n",
-       "      <th>student_name</th>\n",
-       "      <th>gender</th>\n",
-       "      <th>grade</th>\n",
-       "      <th>school_name</th>\n",
-       "      <th>reading_score</th>\n",
-       "      <th>math_score</th>\n",
-       "      <th>School ID</th>\n",
-       "      <th>type</th>\n",
-       "      <th>size</th>\n",
-       "      <th>budget</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>Paul Bradley</td>\n",
-       "      <td>M</td>\n",
-       "      <td>9th</td>\n",
-       "      <td>Huang High School</td>\n",
-       "      <td>66</td>\n",
-       "      <td>79</td>\n",
-       "      <td>0</td>\n",
-       "      <td>District</td>\n",
-       "      <td>2917</td>\n",
-       "      <td>1910635</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Victor Smith</td>\n",
-       "      <td>M</td>\n",
-       "      <td>12th</td>\n",
-       "      <td>Huang High School</td>\n",
-       "      <td>94</td>\n",
-       "      <td>61</td>\n",
-       "      <td>0</td>\n",
-       "      <td>District</td>\n",
-       "      <td>2917</td>\n",
-       "      <td>1910635</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>Kevin Rodriguez</td>\n",
-       "      <td>M</td>\n",
-       "      <td>12th</td>\n",
-       "      <td>Huang High School</td>\n",
-       "      <td>90</td>\n",
-       "      <td>60</td>\n",
-       "      <td>0</td>\n",
-       "      <td>District</td>\n",
-       "      <td>2917</td>\n",
-       "      <td>1910635</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>Dr. Richard Scott</td>\n",
-       "      <td>M</td>\n",
-       "      <td>12th</td>\n",
-       "      <td>Huang High School</td>\n",
-       "      <td>67</td>\n",
-       "      <td>58</td>\n",
-       "      <td>0</td>\n",
-       "      <td>District</td>\n",
-       "      <td>2917</td>\n",
-       "      <td>1910635</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>Bonnie Ray</td>\n",
-       "      <td>F</td>\n",
-       "      <td>9th</td>\n",
-       "      <td>Huang High School</td>\n",
-       "      <td>97</td>\n",
-       "      <td>84</td>\n",
-       "      <td>0</td>\n",
-       "      <td>District</td>\n",
-       "      <td>2917</td>\n",
-       "      <td>1910635</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Student ID       student_name gender grade        school_name  \\\n",
-       "0           0       Paul Bradley      M   9th  Huang High School   \n",
-       "1           1       Victor Smith      M  12th  Huang High School   \n",
-       "2           2    Kevin Rodriguez      M  12th  Huang High School   \n",
-       "3           3  Dr. Richard Scott      M  12th  Huang High School   \n",
-       "4           4         Bonnie Ray      F   9th  Huang High School   \n",
-       "\n",
-       "   reading_score  math_score  School ID      type  size   budget  \n",
-       "0             66          79          0  District  2917  1910635  \n",
-       "1             94          61          0  District  2917  1910635  \n",
-       "2             90          60          0  District  2917  1910635  \n",
-       "3             67          58          0  District  2917  1910635  \n",
-       "4             97          84          0  District  2917  1910635  "
-      ]
-     },
-     "execution_count": 73,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Files to Load\n",
     "student_input = \"Resources/students_complete.csv\"\n",
@@ -157,8 +27,7 @@
     "school_data = pd.read_csv(school_input)\n",
     "\n",
     "# Combine the data into a single dataset.  \n",
-    "df = pd.merge(student_data, school_data, how=\"left\", on=[\"school_name\", \"school_name\"])\n",
-    "df.head()"
+    "df = pd.merge(student_data, school_data, how=\"left\", on=[\"school_name\", \"school_name\"])"
    ]
   },
   {
@@ -188,65 +57,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
-   "id": "ccdf3c92-c827-4c56-ad43-d1410eebdb54",
+   "execution_count": 262,
+   "id": "57f3032b-6d79-4fb8-8ba9-4e35e6fbec49",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'Total Schools': 15, 'Total Students': 39170}"
-      ]
-     },
-     "execution_count": 128,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# create dataframe to show total with columns for schools, students, and budget\n",
-    "test_dict = {\"Total Schools\" : df[\"School ID\"].nunique(), \"Total Students\" : df[\"Student ID\"].nunique()}\n",
-    "test_dict"
+    "# calculate totals for schools and students\n",
+    "school_count = len(df[\"school_name\"].unique())\n",
+    "student_count = df[\"Student ID\"].count()\n",
+    "\n",
+    "# calculate the total budget\n",
+    "total_budget = school_data[\"budget\"].sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
-   "id": "57f3032b-6d79-4fb8-8ba9-4e35e6fbec49",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "Length mismatch: Expected 39170 rows, received array of length 15",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/q2/5v2xmgf12v118bg1jrms5ph80000gn/T/ipykernel_29526/3651593579.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mbudget_test\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"School ID\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"budget\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_index\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"School ID\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0munique\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mbudget_test\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/opt/anaconda3/lib/python3.9/site-packages/pandas/util/_decorators.py\u001b[0m in \u001b[0;36mwrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    309\u001b[0m                     \u001b[0mstacklevel\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mstacklevel\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    310\u001b[0m                 )\n\u001b[0;32m--> 311\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mfunc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    312\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    313\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mwrapper\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/opt/anaconda3/lib/python3.9/site-packages/pandas/core/frame.py\u001b[0m in \u001b[0;36mset_index\u001b[0;34m(self, keys, drop, append, inplace, verify_integrity)\u001b[0m\n\u001b[1;32m   5499\u001b[0m                 \u001b[0;31m# check newest element against length of calling frame, since\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   5500\u001b[0m                 \u001b[0;31m# ensure_index_from_sequences would not raise for append=False.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 5501\u001b[0;31m                 raise ValueError(\n\u001b[0m\u001b[1;32m   5502\u001b[0m                     \u001b[0;34mf\"Length mismatch: Expected {len(self)} rows, \"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   5503\u001b[0m                     \u001b[0;34mf\"received array of length {len(arrays[-1])}\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: Length mismatch: Expected 39170 rows, received array of length 15"
-     ]
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 263,
    "id": "bea0a4b1-fc40-4947-b4f3-4f3d7d619502",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create dataframe to show avg with columns math score and reading score\n",
-    "avg_df = df.loc[:,[\"math_score\",\"reading_score\"]].mean()\n",
-    "avg_df.head()"
+    "# calculate average scores\n",
+    "avg_math = df[\"math_score\"].mean()\n",
+    "avg_reading = df[\"reading_score\"].mean()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 264,
    "id": "89ad8b6a-ae57-4e5d-807b-6019a736db7e",
+   "metadata": {
+    "scrolled": true,
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# calculate % passing for math\n",
+    "pass_math = df.loc[(df[\"math_score\"] >= 70.0)].math_score.count()\n",
+    "percent_pass_math = (pass_math / student_count) * 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 265,
+   "id": "1ca33e21-9400-49a3-841a-a0a5846280a4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# calculate % passing for reading\n",
+    "pass_reading = df.loc[(df[\"reading_score\"] >= 70.0)].reading_score.count()\n",
+    "percent_pass_reading = (pass_reading / student_count) * 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 266,
+   "id": "d30e8b4b-8b56-4531-b1ab-8bd448d4cdaf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# calculate % passing for both\n",
+    "pass_both = df.loc[(df[\"math_score\"] >= 70.0) & (df[\"reading_score\"] >= 70.0)].reading_score.count()\n",
+    "percent_pass_both = (pass_both / student_count) * 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 267,
+   "id": "4fe192aa-130f-4848-819c-3aaf8fd077b0",
    "metadata": {},
    "outputs": [
     {
@@ -270,134 +148,67 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Student ID</th>\n",
-       "      <th>student_name</th>\n",
-       "      <th>gender</th>\n",
-       "      <th>grade</th>\n",
-       "      <th>school_name</th>\n",
-       "      <th>reading_score</th>\n",
-       "      <th>math_score</th>\n",
-       "      <th>School ID</th>\n",
-       "      <th>type</th>\n",
-       "      <th>size</th>\n",
-       "      <th>budget</th>\n",
-       "      <th>% passing math</th>\n",
+       "      <th>Total Schools</th>\n",
+       "      <th>Total Students</th>\n",
+       "      <th>Total Budget</th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>Paul Bradley</td>\n",
-       "      <td>M</td>\n",
-       "      <td>9th</td>\n",
-       "      <td>Huang High School</td>\n",
-       "      <td>66</td>\n",
-       "      <td>79</td>\n",
-       "      <td>0</td>\n",
-       "      <td>District</td>\n",
-       "      <td>2917</td>\n",
-       "      <td>1910635</td>\n",
-       "      <td>0.241435</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Victor Smith</td>\n",
-       "      <td>M</td>\n",
-       "      <td>12th</td>\n",
-       "      <td>Huang High School</td>\n",
-       "      <td>94</td>\n",
-       "      <td>61</td>\n",
-       "      <td>0</td>\n",
-       "      <td>District</td>\n",
-       "      <td>2917</td>\n",
-       "      <td>1910635</td>\n",
-       "      <td>0.241435</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>Kevin Rodriguez</td>\n",
-       "      <td>M</td>\n",
-       "      <td>12th</td>\n",
-       "      <td>Huang High School</td>\n",
-       "      <td>90</td>\n",
-       "      <td>60</td>\n",
-       "      <td>0</td>\n",
-       "      <td>District</td>\n",
-       "      <td>2917</td>\n",
-       "      <td>1910635</td>\n",
-       "      <td>0.241435</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>Dr. Richard Scott</td>\n",
-       "      <td>M</td>\n",
-       "      <td>12th</td>\n",
-       "      <td>Huang High School</td>\n",
-       "      <td>67</td>\n",
-       "      <td>58</td>\n",
-       "      <td>0</td>\n",
-       "      <td>District</td>\n",
-       "      <td>2917</td>\n",
-       "      <td>1910635</td>\n",
-       "      <td>0.241435</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>Bonnie Ray</td>\n",
-       "      <td>F</td>\n",
-       "      <td>9th</td>\n",
-       "      <td>Huang High School</td>\n",
-       "      <td>97</td>\n",
-       "      <td>84</td>\n",
-       "      <td>0</td>\n",
-       "      <td>District</td>\n",
-       "      <td>2917</td>\n",
-       "      <td>1910635</td>\n",
-       "      <td>0.241435</td>\n",
+       "      <td>15</td>\n",
+       "      <td>39170</td>\n",
+       "      <td>$24,649,428.00</td>\n",
+       "      <td>78.985371</td>\n",
+       "      <td>81.87784</td>\n",
+       "      <td>74.98085%</td>\n",
+       "      <td>85.80546%</td>\n",
+       "      <td>65.17233%</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Student ID       student_name gender grade        school_name  \\\n",
-       "0           0       Paul Bradley      M   9th  Huang High School   \n",
-       "1           1       Victor Smith      M  12th  Huang High School   \n",
-       "2           2    Kevin Rodriguez      M  12th  Huang High School   \n",
-       "3           3  Dr. Richard Scott      M  12th  Huang High School   \n",
-       "4           4         Bonnie Ray      F   9th  Huang High School   \n",
+       "   Total Schools  Total Students    Total Budget  Average Math Score  \\\n",
+       "0             15           39170  $24,649,428.00           78.985371   \n",
        "\n",
-       "   reading_score  math_score  School ID      type  size   budget  \\\n",
-       "0             66          79          0  District  2917  1910635   \n",
-       "1             94          61          0  District  2917  1910635   \n",
-       "2             90          60          0  District  2917  1910635   \n",
-       "3             67          58          0  District  2917  1910635   \n",
-       "4             97          84          0  District  2917  1910635   \n",
-       "\n",
-       "   % passing math  \n",
-       "0        0.241435  \n",
-       "1        0.241435  \n",
-       "2        0.241435  \n",
-       "3        0.241435  \n",
-       "4        0.241435  "
+       "   Average Reading Score % Passing Math % Passing Reading % Overall Passing  \n",
+       "0               81.87784      74.98085%         85.80546%         65.17233%  "
       ]
      },
-     "execution_count": 116,
+     "execution_count": 267,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# create new columns that show % passing for math, reading, and combined\n",
-    "newDF = df\n",
-    "newDF[\"% passing math\"] = (df[\"math_score\"].mean() / df[\"student_name\"].nunique()) * 100\n",
-    "newDF.head()"
+    "district_df = pd.DataFrame(columns=('Total Schools','Total Students','Total Budget','Average Math Score','Average Reading Score','% Passing Math','% Passing Reading','% Overall Passing'))\n",
+    "\n",
+    "district_df.loc[0] = [school_count,student_count,total_budget,avg_math,avg_reading,percent_pass_math,percent_pass_reading,percent_pass_both]\n",
+    "\n",
+    "district_df[\"Total Schools\"] = district_df[\"Total Schools\"].astype(int)\n",
+    "district_df[\"Total Students\"] = district_df[\"Total Students\"].astype(int)\n",
+    "district_df[\"Total Budget\"] = district_df[\"Total Budget\"].map(\"${:,.2f}\".format)\n",
+    "district_df[\"% Passing Math\"] = district_df[\"% Passing Math\"].map(\"{:.5f}%\".format)\n",
+    "district_df[\"% Passing Reading\"] = district_df[\"% Passing Reading\"].map(\"{:.5f}%\".format)\n",
+    "district_df[\"% Overall Passing\"] = district_df[\"% Overall Passing\"].map(\"{:.5f}%\".format)\n",
+    "\n",
+    "district_df.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5c130669-94bc-4978-bc69-d639aea7aa71",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
