updating with school summary code

--- a/PyCitySchools/PyCitySchools.ipynb
+++ b/PyCitySchools/PyCitySchools.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 275,
    "id": "7e36d9dd-219d-4414-b302-112aabf1605f",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 276,
    "id": "f147640c-4a62-454a-a6fb-f14051604670",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
     "school_data = pd.read_csv(school_input)\n",
     "\n",
     "# Combine the data into a single dataset.  \n",
-    "df = pd.merge(student_data, school_data, how=\"left\", on=[\"school_name\", \"school_name\"])"
+    "df = pd.merge(student_data, school_data, how=\"left\", on=[\"school_name\", \"school_name\"])\n"
    ]
   },
   {
@@ -57,14 +57,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 277,
    "id": "57f3032b-6d79-4fb8-8ba9-4e35e6fbec49",
    "metadata": {},
    "outputs": [],
    "source": [
     "# calculate totals for schools and students\n",
-    "school_count = len(df[\"school_name\"].unique())\n",
-    "student_count = df[\"Student ID\"].count()\n",
+    "total_schools = len(df[\"school_name\"].unique())\n",
+    "total_students = df[\"Student ID\"].count()\n",
     "\n",
     "# calculate the total budget\n",
     "total_budget = school_data[\"budget\"].sum()"
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 278,
    "id": "bea0a4b1-fc40-4947-b4f3-4f3d7d619502",
    "metadata": {},
    "outputs": [],
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 279,
    "id": "89ad8b6a-ae57-4e5d-807b-6019a736db7e",
    "metadata": {
     "scrolled": true,
@@ -94,36 +94,36 @@
    "source": [
     "# calculate % passing for math\n",
     "pass_math = df.loc[(df[\"math_score\"] >= 70.0)].math_score.count()\n",
-    "percent_pass_math = (pass_math / student_count) * 100"
+    "percent_pass_math = (pass_math / total_students) * 100"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 280,
    "id": "1ca33e21-9400-49a3-841a-a0a5846280a4",
    "metadata": {},
    "outputs": [],
    "source": [
     "# calculate % passing for reading\n",
     "pass_reading = df.loc[(df[\"reading_score\"] >= 70.0)].reading_score.count()\n",
-    "percent_pass_reading = (pass_reading / student_count) * 100"
+    "percent_pass_reading = (pass_reading / total_students) * 100"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 281,
    "id": "d30e8b4b-8b56-4531-b1ab-8bd448d4cdaf",
    "metadata": {},
    "outputs": [],
    "source": [
     "# calculate % passing for both\n",
     "pass_both = df.loc[(df[\"math_score\"] >= 70.0) & (df[\"reading_score\"] >= 70.0)].reading_score.count()\n",
-    "percent_pass_both = (pass_both / student_count) * 100"
+    "percent_pass_both = (pass_both / total_students) * 100"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 282,
    "id": "4fe192aa-130f-4848-819c-3aaf8fd077b0",
    "metadata": {},
    "outputs": [
@@ -182,7 +182,7 @@
        "0               81.87784      74.98085%         85.80546%         65.17233%  "
       ]
      },
-     "execution_count": 267,
+     "execution_count": 282,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,7 +190,7 @@
    "source": [
     "district_df = pd.DataFrame(columns=('Total Schools','Total Students','Total Budget','Average Math Score','Average Reading Score','% Passing Math','% Passing Reading','% Overall Passing'))\n",
     "\n",
-    "district_df.loc[0] = [school_count,student_count,total_budget,avg_math,avg_reading,percent_pass_math,percent_pass_reading,percent_pass_both]\n",
+    "district_df.loc[0] = [total_schools,total_students,total_budget,avg_math,avg_reading,percent_pass_math,percent_pass_reading,percent_pass_both]\n",
     "\n",
     "district_df[\"Total Schools\"] = district_df[\"Total Schools\"].astype(int)\n",
     "district_df[\"Total Students\"] = district_df[\"Total Students\"].astype(int)\n",
@@ -239,11 +239,169 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 311,
    "id": "62039a2b-8652-406a-83c1-ffaa9f58261c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>student_name</th>\n",
+       "      <th>math_score</th>\n",
+       "      <th>reading_score</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>school_name</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Bailey High School</th>\n",
+       "      <td>4976</td>\n",
+       "      <td>77.048432</td>\n",
+       "      <td>81.033963</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Cabrera High School</th>\n",
+       "      <td>1858</td>\n",
+       "      <td>83.061895</td>\n",
+       "      <td>83.975780</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Figueroa High School</th>\n",
+       "      <td>2949</td>\n",
+       "      <td>76.711767</td>\n",
+       "      <td>81.158020</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ford High School</th>\n",
+       "      <td>2739</td>\n",
+       "      <td>77.102592</td>\n",
+       "      <td>80.746258</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Griffin High School</th>\n",
+       "      <td>1468</td>\n",
+       "      <td>83.351499</td>\n",
+       "      <td>83.816757</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Hernandez High School</th>\n",
+       "      <td>4635</td>\n",
+       "      <td>77.289752</td>\n",
+       "      <td>80.934412</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Holden High School</th>\n",
+       "      <td>427</td>\n",
+       "      <td>83.803279</td>\n",
+       "      <td>83.814988</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Huang High School</th>\n",
+       "      <td>2917</td>\n",
+       "      <td>76.629414</td>\n",
+       "      <td>81.182722</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Johnson High School</th>\n",
+       "      <td>4761</td>\n",
+       "      <td>77.072464</td>\n",
+       "      <td>80.966394</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Pena High School</th>\n",
+       "      <td>962</td>\n",
+       "      <td>83.839917</td>\n",
+       "      <td>84.044699</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Rodriguez High School</th>\n",
+       "      <td>3999</td>\n",
+       "      <td>76.842711</td>\n",
+       "      <td>80.744686</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Shelton High School</th>\n",
+       "      <td>1761</td>\n",
+       "      <td>83.359455</td>\n",
+       "      <td>83.725724</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Thomas High School</th>\n",
+       "      <td>1635</td>\n",
+       "      <td>83.418349</td>\n",
+       "      <td>83.848930</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Wilson High School</th>\n",
+       "      <td>2283</td>\n",
+       "      <td>83.274201</td>\n",
+       "      <td>83.989488</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Wright High School</th>\n",
+       "      <td>1800</td>\n",
+       "      <td>83.682222</td>\n",
+       "      <td>83.955000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       student_name  math_score  reading_score\n",
+       "school_name                                                   \n",
+       "Bailey High School             4976   77.048432      81.033963\n",
+       "Cabrera High School            1858   83.061895      83.975780\n",
+       "Figueroa High School           2949   76.711767      81.158020\n",
+       "Ford High School               2739   77.102592      80.746258\n",
+       "Griffin High School            1468   83.351499      83.816757\n",
+       "Hernandez High School          4635   77.289752      80.934412\n",
+       "Holden High School              427   83.803279      83.814988\n",
+       "Huang High School              2917   76.629414      81.182722\n",
+       "Johnson High School            4761   77.072464      80.966394\n",
+       "Pena High School                962   83.839917      84.044699\n",
+       "Rodriguez High School          3999   76.842711      80.744686\n",
+       "Shelton High School            1761   83.359455      83.725724\n",
+       "Thomas High School             1635   83.418349      83.848930\n",
+       "Wilson High School             2283   83.274201      83.989488\n",
+       "Wright High School             1800   83.682222      83.955000"
+      ]
+     },
+     "execution_count": 311,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# group by school / school name is index\n",
+    "# used groupby / agg to count student names and find avg for math and reading scores\n",
+    "groupby_school_df = df.set_index([\"school_name\"]).sort_index()\n",
+    "groupby_school_df = groupby_school_df.groupby(\"school_name\").agg({'student_name': 'count', 'math_score': 'mean', 'reading_score': 'mean'})\n",
+    "groupby_school_df.head(15)\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -429,7 +587,9 @@
    "id": "e541a5c3-c9d8-4cde-a03a-2945d879fe1a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#group by size"
+   ]
   },
   {
    "cell_type": "code",
@@ -455,7 +615,9 @@
    "id": "3e1d7d98-f1a2-4494-b49f-f86b8be67337",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#group by type"
+   ]
   },
   {
    "cell_type": "code",
